--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>api</title>
+    <title>Api GitHub</title>
 </head>
 <body>
-    <main>
-        <h1>API GitHub</h1>
-        <hr/>
-        <div class="barra_buscar">
-        <input type="text" class="gitruby" placeholder="DIGITE SEU GITHUB" id="git">
-        <button class = consulta id="consulta" onclick="searchUser()">Buscar</button>
-        </div>
-        <ul></ul>
-    </main>
-</body>
-<script src="script.js"></script>
+    <section>
+        <img src="" id="imagem">
+        <input id="txtinput" placeholder="Digite o nick do usuario">
+        <button onclick="buscarGit()">Buscar</button>
+        <div class="fields" id ='name'></div>
+        <div class="fields" id ='name'></div>      
+        <div class="fields" id ='name'></div>
+    </section>
+    
+    </body>
 </html>
+<script src="script.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
