--- a/index.html
+++ b/index.html
@@ -8,13 +8,28 @@
     <title>Api GitHub</title>
 </head>
 <body>
-    <section>
-        <img src="" id="imagem">
-        <input id="txtinput" placeholder="Digite o nick do usuario">
-        <button onclick="buscarGit()">Buscar</button>
-        <div class="fields" id ='name'></div>
-        <div class="fields" id ='name'></div>      
-        <div class="fields" id ='name'></div>
+    <h1>GitHub</h1> 
+    <section class="ss"> 
+        <input class="inputb" id="txtinput" placeholder="Digite o nick do usuario">
+        <button class="botaob" id="botaobuscar" onclick="buscargit()">
+            Buscar
+        </button>
+    </section>
+
+    <section >
+        <div>
+        <img src="" id="imagemperfil">
+    </div>
+        <div>
+        <input type="text" id ='name'>
+    </div>
+    <div>
+        <input type="text" id ='bio'> 
+    </div>
+    <div>
+        <input type="text" id ='email'>
+    </div>
+        
     </section>
     
     </body>
